--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
     <div id="contact_container">
         <header id="topbar">
             <nav id="navbar">
-                <span class="logo"><a href="home.html"><img src="assets/images/logo.png"
+                <span class="logo"><a href="index.html"><img src="assets/images/logo.png"
                             alt="logo of the page" /></a></span>
                 <ul class="utility">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about_me.html">About Me</a>
                     </li>
                     <li><a href="reviews.html">Reviews</a></li>
