--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/navbar.css" />
     <link rel="stylesheet" href="assets/css/index.css" />
 </head>
 
 <body>
-    <div class="bg_container" style="background-image: url('../assets/images/bg-main.png'); height: 100vh">
+    <div class="bg_container" style="background-image: url('../assets/images/bg-main.png');">
         <!-- navigation bar -->
         <nav class="navbar navbar-expand-lg fixed-top bg_color_dark">
             <div class="container-fluid">
@@ -66,27 +69,27 @@
                 </div>
             </div>
         </nav>
-        <!-- intro section -->
-        <div class="row intro_section">
-            <div class="col-6 img_section"><img src="assets/images/2.png" alt="photo of shuma" /></div>
-            <div class="col-6 heading_section">
-                <h1>Shuma, a <i>Front-End Developer.</i></h1>
-                <span><a href="#">shuma@domain.com</a></span>
+        <div class="container">
+            <!-- intro section -->
+            <div class="row intro_section">
+                <div class="col-6 img_section"><img src="assets/images/2.png" alt="photo of shuma" /></div>
+                <div class="col-6 heading_section">
+                    <h1>Shuma, a <i>Front-End Developer.</i></h1>
+                    <span><a href="#">shuma@domain.com</a></span>
+                </div>
             </div>
-        </div>
-        <!-- </div>
-            <div id="resume_section">
-                <div class="resume_intro">
+            <!-- resume section -->
+            <div class="row resume_section">
+                <div class="col-6 resume_intro">
                     <h1>This is Shumas' Resume</h1>
                     <p>Shuma Resume HTML Template is brought to you by Tooplate website. You can feel free to edit
-                        and use this
-                        page for your small site. You are allowed to use this HTML template for any kind of purpose.
-                        Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Maiores, optio doloribus? Dolores sed accusamus
-                        minus,
-                        ducimus vero obcaecati alias officiis. Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit.
-                        Dolorem, necessitatibus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab,
+                        and use this page for your small site. You are allowed to use this HTML template for any kind of
+                        purpose.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, optio doloribus? Dolores sed
+                        accusamus
+                        minus, ducimus vero obcaecati alias officiis. Lorem ipsum dolor sit amet consectetur,
+                        adipisicing
+                        elit. Dolorem, necessitatibus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab,
                         consequuntur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto in
                         repudiandae aliquam modi quibusdam pariatur? Ratione laboriosam a dolorum eaque!</p>
                     <p>In pellentesque metus nibh, eu efficitur tortor dignissim id. Duis a quam vel odio malesuada
@@ -99,12 +102,12 @@
                     <div class="resume_info">
                         <table>
                             <tr>
-                                <td><strong>Full Name:</strong></td>
-                                <td>Farhana Mimi Shuma</td>
+                                <td><strong>Full&nbsp;Name:</strong></td>
+                                <td>Farhana&nbsp;Mimi&nbsp;Shuma</td>
                             </tr>
                             <tr>
-                                <td><strong>Date of Birth:</strong></td>
-                                <td>03 October, 1995</td>
+                                <td><strong>Date&nbsp;of&nbsp;Birth:</strong></td>
+                                <td>03&nbsp;October,&nbsp;1995</td>
                             </tr>
                             <tr>
                                 <td><strong>Website:</strong></td>
@@ -112,15 +115,84 @@
                             </tr>
                             <tr>
                                 <td><strong>Email:</strong></td>
-                                <td>mimi@gmail.com</td>
+                                <td>shuma@gmail.com</td>
                             </tr>
                         </table>
                     </div>
                 </div>
-                <div class="resume_img"><img src="assets/images/about-me-img.png" alt="photo of shuma" /></div>
+                <div class="col-6 resume_img"><img src="assets/images/about-me-img.png" alt="photo of shuma" /></div>
             </div>
-            <div id="project_preview">
+            <div class="row project_preview">
                 <h1>Project Preview:</h1>
+                <div class="col-3 mt-5 mb-5">
+                    <div class="card border_black" style="width: 18rem;">
+                        <div class="card-body bg_black" style="color: white;">
+                            <h5 class="card-title">Bestore.com <span><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i></span></h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="card-link btn btn-success">Live Preview</a>
+                            <a href="#" class="card-link btn btn-secondary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mt-5 mb-5">
+                    <div class="card border_black" style="width: 18rem;">
+                        <div class="card-body bg_black" style="color: white;">
+                            <h5 class="card-title">Bestore.com <span><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i></span></h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="card-link btn btn-success">Live Preview</a>
+                            <a href="#" class="card-link btn btn-secondary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mt-5 mb-5">
+                    <div class="card border_black" style="width: 18rem;">
+                        <div class="card-body bg_black" style="color: white;">
+                            <h5 class="card-title">Bestore.com <span><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i></span></h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="card-link btn btn-success">Live Preview</a>
+                            <a href="#" class="card-link btn btn-secondary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mt-5 mb-5">
+                    <div class="card border_black" style="width: 18rem;">
+                        <div class="card-body bg_black" style="color: white;">
+                            <h5 class="card-title">Bestore.com <span><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
+                                        style="color: #FFD43B;"></i></span></h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="card-link btn btn-success">Live Preview</a>
+                            <a href="#" class="card-link btn btn-secondary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--    <div id="project_preview">
+                
                 <div id="homepage_card_container">
                     <div class="card">
                         <h2>Bestore.com</h2>
