card added and linked with live preview and github in project preview section

--- a/index.html
+++ b/index.html
@@ -125,66 +125,80 @@
             <div class="row project_preview">
                 <h1>Project Preview:</h1>
                 <div class="col-3 mt-5 mb-5">
-                    <div class="card border_black" style="width: 18rem;">
+                    <div class="card border_black" style="width: 18rem; height:15rem;">
                         <div class="card-body bg_black" style="color: white;">
-                            <h5 class="card-title">Bestore.com <span><i class="fa-solid fa-star fa-2xs"
+                            <h5 class="card-title">Bootstrap Buttons <span><i class="fa-solid fa-star fa-2xs"
                                         style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
                                         style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
                                         style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
                                         style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
                                         style="color: #FFD43B;"></i></span></h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            <p class="card-text" style="height:7.5rem;">Some quick example text to build on the card
+                                title
+                                and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="card-link btn btn-success">Live Preview</a>
-                            <a href="#" class="card-link btn btn-secondary">GitHub</a>
+                            <a href="https://codepen.io/pen?template=MWRYzmw" class="card-link btn btn-success">Live
+                                Preview</a>
+                            <a href="https://github.com/MimiShuma/buttons.git"
+                                class="card-link btn btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-3 mt-5 mb-5">
-                    <div class="card border_black" style="width: 18rem;">
+                    <div class="card border_black" style="width: 18rem; height:15rem;">
                         <div class="card-body bg_black" style="color: white;">
-                            <h5 class="card-title">Bestore.com <span><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i></span></h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            <h5 class="card-title">Responsive Image - with CSS media query
+                                <span><i class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i></span>
+                            </h5>
+                            <p class="card-text" style="height:6rem;">Some quick example text to build on the card
+                                title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="card-link btn btn-success">Live Preview</a>
-                            <a href="#" class="card-link btn btn-secondary">GitHub</a>
+                            <a href="https://codepen.io/pen?template=rNRgGKp" class="card-link btn btn-success">Live
+                                Preview</a>
+                            <a href="https://github.com/MimiShuma/responsive_image-three_ways_to_do_it/blob/ef7755f6b15655ce5cca5d35182fa64565291787/with_multiple_image_of_aspect_ratio_and_media_query.html"
+                                class="card-link btn btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-3 mt-5 mb-5">
-                    <div class="card border_black" style="width: 18rem;">
+                    <div class="card border_black" style="width: 18rem; height:15rem;">
                         <div class="card-body bg_black" style="color: white;">
-                            <h5 class="card-title">Bestore.com <span><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i></span></h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            <h5 class="card-title">Responsive Image - with CSS width property <span><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i></span></h5>
+                            <p class="card-text" style="height:6rem;">Some quick example text to build on the card
+                                title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="card-link btn btn-success">Live Preview</a>
-                            <a href="#" class="card-link btn btn-secondary">GitHub</a>
+                            <a href="https://codepen.io/MimiShuma/pen/Jjzqrva" class="card-link btn btn-success">Live
+                                Preview</a>
+                            <a href="https://github.com/MimiShuma/responsive_image-three_ways_to_do_it/blob/ef7755f6b15655ce5cca5d35182fa64565291787/with_css_width_property.html"
+                                class="card-link btn btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-3 mt-5 mb-5">
-                    <div class="card border_black" style="width: 18rem;">
+                    <div class="card border_black" style="width: 18rem; height:15rem;">
                         <div class="card-body bg_black" style="color: white;">
-                            <h5 class="card-title">Bestore.com <span><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
-                                        style="color: #FFD43B;"></i></span></h5>
+                            <h5 class="card-title">Responsive Image - with CSS object fit property and media query
+                                <span><i class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i></span>
+                            </h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="card-link btn btn-success">Live Preview</a>
-                            <a href="#" class="card-link btn btn-secondary">GitHub</a>
+                            <a href="https://codepen.io/MimiShuma/pen/NWJVaMN" class="card-link btn btn-success">Live
+                                Preview</a>
+                            <a href="https://github.com/MimiShuma/responsive_image-three_ways_to_do_it/blob/ef7755f6b15655ce5cca5d35182fa64565291787/with_css_object_fit_property_and_media_query.html"
+                                class="card-link btn btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
