--- a/index.html
+++ b/index.html
@@ -203,169 +203,99 @@
                     </div>
                 </div>
             </div>
+            <div class="row homepage_reviews">
+                <h1 style="text-align: left;">What People Say:</h1>
+                <div class="col-4 mt-5 mb-5">
+                    <div class="card text-center mb-3 border_black" style="width: 25rem;">
+                        <div class="card-body bg_black font_color_w">
+                            <img src="assets/images/user.png" alt="reviewer image" />
+                            <h5 class="card-title"><span><strong>E. Collin</strong>,</span>&nbsp;<span
+                                    style="font-size: small; opacity: 50%;">Director</span>&nbsp;<span><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-regular fa-star fa-2xs" style="color: #FFD43B;"></i></span>
+                            </h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 mt-5 mb-5">
+                    <div class="card text-center mb-3 border_black" style="width: 25rem;">
+                        <div class="card-body bg_black font_color_w">
+                            <img src="assets/images/user.png" alt="reviewer image" />
+                            <h5 class="card-title"><span><strong>E. Collin</strong>,</span>&nbsp;<span
+                                    style="font-size: small; opacity: 50%;">Director</span>&nbsp;<span><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-regular fa-star fa-2xs" style="color: #FFD43B;"></i></span>
+                            </h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 mt-5 mb-5">
+                    <div class="card text-center mb-3 border_black" style="width: 25rem;">
+                        <div class="card-body bg_black font_color_w">
+                            <img src="assets/images/user.png" alt="reviewer image" />
+                            <h5 class="card-title"><span><strong>E. Collin</strong>,</span>&nbsp;<span
+                                    style="font-size: small; opacity: 50%;">Director</span>&nbsp;<span><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
+                                        class="fa-regular fa-star fa-2xs" style="color: #FFD43B;"></i></span>
+                            </h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <h1 class="font_color_w">Frequently Asked Questions:</h1>
+                <div class="col-1"><br></div>
+                <div class="col-10 font_color_w faq_section mb-5 mt-5">
+                    <fieldset>
+                        <table class="faq_table">
+                            <tr>
+                                <td class="border_rw"><strong>Are those HTML templates absolutely free for any kind of
+                                        usage?</strong></td>
+                                <td>Yes, they are 100% free and there is no hidden charge. They can be used for your
+                                    commercial websites.</td>
+                            </tr>
+                            <tr>
+                                <td class="border_rw"><strong>Can I use them as a CMS theme or a part of website
+                                        builder?</strong></td>
+                                <td>Yes, you can use them.</td>
+                            </tr>
+                            <tr>
+                                <td class="border_rw"><strong>I cannot find a suitable HTML template. Can I request new
+                                        template?</strong>
+                                </td>
+                                <td>Yes, please tell us what you need. We will try our best to fulfill it.</td>
+                            </tr>
+                            <tr>
+                                <td class="border_rw"><strong>Are those HTML templates absolutely free for any kind of
+                                        usage?</strong></td>
+                                <td>Yes, they are 100% free and there is no hidden charge. They can be used for your
+                                    commercial websites.</td>
+                            </tr>
+                        </table>
+                    </fieldset>
+                </div>
+                <div class="col-1"><br></div>
+            </div>
         </div>
     </div>
-    <!--    <div id="project_preview">
+    <!--    <div id="faq">
                 
-                <div id="homepage_card_container">
-                    <div class="card">
-                        <h2>Bestore.com</h2>
-                        <p>This is a demo website that i didn't even make. I donno how am i even going to make one in
-                            the
-                            future. hehe!</p>
-                        <span class="star_review">&#11088;&#11088;&#11088;&#11088;&#11088;</span>
-                        <span class="react_counter">&#9829;&nbsp;230</span><br /><br />
-                        <span class="button"><a
-                                href="https://github.com/MimiShuma/bestore_header">See&nbsp;More</a></span>
-                    </div>
-                    <div class="card">
-                        <h2>Sindabad.com</h2>
-                        <p>This is a demo website that i didn't even make. I donno how am i even going to make one in
-                            the
-                            future. hehe!</p>
-                        <span class="star_review">&#11088;&#11088;&#11088;&#11088;&#11088;</span>
-                        <span class="react_counter">&#9829;&nbsp;230</span><br /><br />
-                        <span class="button"><a
-                                href="https://github.com/MimiShuma/sindabad_header">See&nbsp;More</a></span>
-                    </div>
-                    <div class="card">
-                        <h2>Woven.com</h2>
-                        <p>This is a demo website that i didn't even make. I donno how am i even going to make one in
-                            the
-                            future. hehe!</p>
-                        <span class="star_review">&#11088;&#11088;&#11088;&#11088;&#11088;</span>
-                        <span class="react_counter">&#9829;&nbsp;230</span><br /><br />
-                        <span class="button"><a
-                                href="https://github.com/MimiShuma/woven_header">See&nbsp;More</a></span>
-                    </div>
-                    <div class="card">
-                        <h2>Parquetry.com</h2>
-                        <p>This is a demo website that i didn't even make. I donno how am i even going to make one in
-                            the
-                            future. hehe!</p>
-                        <span class="star_review">&#11088;&#11088;&#11088;&#11088;&#11088;</span>
-                        <span class="react_counter">&#9829;&nbsp;230</span><br /><br />
-                        <span class="button"><a
-                                href="https://github.com/MimiShuma/parquetry_header">See&nbsp;More</a></span>
-                    </div>
-                </div>
-            </div>
-
-            <div id="homepage_reviews">
-                <h1>What People Say:</h1>
-                <div class="review_cards_container">
-                    <div class="review_cards">
-                        <span><strong>E. Collin</strong>,</span>
-                        <span>Director</span>
-                        <span><i class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-regular fa-star fa-2xs" style="color: #FFD43B;"></i></span>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis sit est aperiam minus vitae
-                            voluptas error nihil quis assumenda ratione. Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Accusamus, atque!</p>
-                    </div>
-                    <div class="review_cards">
-                        <span><strong>E. Collin</strong>,</span>
-                        <span>Director</span>
-                        <span><i class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-regular fa-star fa-2xs" style="color: #FFD43B;"></i></span>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis sit est aperiam minus vitae
-                            voluptas error nihil quis assumenda ratione. Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Accusamus, atque!</p>
-                    </div>
-                    <div class="review_cards">
-                        <span><strong>E. Collin</strong>,</span>
-                        <span>Director</span>
-                        <span><i class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
-                                class="fa-regular fa-star fa-2xs" style="color: #FFD43B;"></i></span>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis sit est aperiam minus vitae
-                            voluptas error nihil quis assumenda ratione. Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Accusamus, atque!</p>
-                    </div>
-                </div>
-            </div>
-            <div id="faq">
-                <fieldset>
-                    <legend style="font-size: 30px;">Frequently Asked Questions:</legend>
-                    <table>
-                        <tr>
-                            <td><strong>Are those HTML templates absolutely free for any kind of
-                                    usage?</strong></td>
-                            <td>Yes, they are 100% free and there is no hidden charge. They can be used for your
-                                commercial websites.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Can I use them as a CMS theme or a part of website
-                                    builder?</strong></td>
-                            <td>Yes, you can use them.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>I cannot find a suitable HTML template. Can I request new
-                                    template?</strong>
-                            </td>
-                            <td>Yes, please tell us what you need. We will try our best to fulfill it.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Are those HTML templates absolutely free for any kind of
-                                    usage?</strong></td>
-                            <td>Yes, they are 100% free and there is no hidden charge. They can be used for your
-                                commercial websites.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Can I use them as a CMS theme or a part of website
-                                    builder?</strong></td>
-                            <td>Yes, you can use them.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>I cannot find a suitable HTML template. Can I request new
-                                    template?</strong>
-                            </td>
-                            <td>Yes, please tell us what you need. We will try our best to fulfill it.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Are those HTML templates absolutely free for any kind of
-                                    usage?</strong></td>
-                            <td>Yes, they are 100% free and there is no hidden charge. They can be used for your
-                                commercial websites.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Can I use them as a CMS theme or a part of website
-                                    builder?</strong></td>
-                            <td>Yes, you can use them.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>I cannot find a suitable HTML template. Can I request new
-                                    template?</strong>
-                            </td>
-                            <td>Yes, please tell us what you need. We will try our best to fulfill it.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Are those HTML templates absolutely free for any kind of
-                                    usage?</strong></td>
-                            <td>Yes, they are 100% free and there is no hidden charge. They can be used for your
-                                commercial websites.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Can I use them as a CMS theme or a part of website
-                                    builder?</strong></td>
-                            <td>Yes, you can use them.</td>
-                        </tr>
-                        <tr>
-                            <td><strong>I cannot find a suitable HTML template. Can I request new
-                                    template?</strong>
-                            </td>
-                            <td>Yes, please tell us what you need. We will try our best to fulfill it.</td>
-                        </tr>
-                    </table>
-                </fieldset>
             </div>
         </main>
         <footer id="bottombar">
