home page project review and faq section added with bootstrap.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <h1>Project Preview:</h1>
                 <div class="col-3 mt-5 mb-5">
                     <div class="card border_black" style="width: 18rem; height:15rem;">
-                        <div class="card-body bg_black" style="color: white;">
+                        <div class="card-body bg_black opacity_90p" style="color: white;">
                             <h5 class="card-title">Bootstrap Buttons <span><i class="fa-solid fa-star fa-2xs"
                                         style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
                                         style="color: #FFD43B;"></i><i class="fa-solid fa-star fa-2xs"
@@ -146,7 +146,7 @@
                 </div>
                 <div class="col-3 mt-5 mb-5">
                     <div class="card border_black" style="width: 18rem; height:15rem;">
-                        <div class="card-body bg_black" style="color: white;">
+                        <div class="card-body bg_black opacity_90p" style="color: white;">
                             <h5 class="card-title">Responsive Image - with CSS media query
                                 <span><i class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
                                         class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-3 mt-5 mb-5">
                     <div class="card border_black" style="width: 18rem; height:15rem;">
-                        <div class="card-body bg_black" style="color: white;">
+                        <div class="card-body bg_black opacity_90p" style="color: white;">
                             <h5 class="card-title">Responsive Image - with CSS width property <span><i
                                         class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
                                         class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-3 mt-5 mb-5">
                     <div class="card border_black" style="width: 18rem; height:15rem;">
-                        <div class="card-body bg_black" style="color: white;">
+                        <div class="card-body bg_black opacity_90p" style="color: white;">
                             <h5 class="card-title">Responsive Image - with CSS object fit property and media query
                                 <span><i class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
                                         class="fa-solid fa-star fa-2xs" style="color: #FFD43B;"></i><i
@@ -207,7 +207,7 @@
                 <h1 style="text-align: left;">What People Say:</h1>
                 <div class="col-4 mt-5 mb-5">
                     <div class="card text-center mb-3 border_black" style="width: 25rem;">
-                        <div class="card-body bg_black font_color_w">
+                        <div class="card-body bg_black font_color_w opacity_90p">
                             <img src="assets/images/user.png" alt="reviewer image" />
                             <h5 class="card-title"><span><strong>E. Collin</strong>,</span>&nbsp;<span
                                     style="font-size: small; opacity: 50%;">Director</span>&nbsp;<span><i
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-4 mt-5 mb-5">
                     <div class="card text-center mb-3 border_black" style="width: 25rem;">
-                        <div class="card-body bg_black font_color_w">
+                        <div class="card-body bg_black font_color_w opacity_90p">
                             <img src="assets/images/user.png" alt="reviewer image" />
                             <h5 class="card-title"><span><strong>E. Collin</strong>,</span>&nbsp;<span
                                     style="font-size: small; opacity: 50%;">Director</span>&nbsp;<span><i
@@ -241,7 +241,7 @@
                 </div>
                 <div class="col-4 mt-5 mb-5">
                     <div class="card text-center mb-3 border_black" style="width: 25rem;">
-                        <div class="card-body bg_black font_color_w">
+                        <div class="card-body bg_black font_color_w opacity_90p">
                             <img src="assets/images/user.png" alt="reviewer image" />
                             <h5 class="card-title"><span><strong>E. Collin</strong>,</span>&nbsp;<span
                                     style="font-size: small; opacity: 50%;">Director</span>&nbsp;<span><i
